--- a/image_selector/templates/slide.html
+++ b/image_selector/templates/slide.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Select Images for Slide: {{ slide }}</h1>
 <div class="container">
-    <form action="/select_images" method="POST">
+    <form action="{{ url_for('confirm_images') }}"  method="POST">
         <div class="row">
             <h3>Main Images</h3>
             {% for image in main_images %}
@@ -19,9 +19,11 @@
                         <input class="form-check-input" type="checkbox" role="switch" value="{{ image }}"
                             name="selected_images" id="flexSwitchCheckDefault{{ image }}" {% if image in selected_files
                             %}checked{% endif %}>
+                        <label class="form-check-label" for="flexSwitchCheckDefault{{ image }}">{{ image | replace(".jpg", "")}}</label>
+
                         <!-- <label class="form-check-label" for="flexSwitchCheckDefault{{ image }}">{{ image | replace(".jpg", "")}}</label> -->
                     </div>
-                    <label>{{ image }}</label>
+                    <!-- <label>{{ image }}</label> -->
                 </div>
             </div>
             {% endfor %}
@@ -41,20 +43,23 @@
                             name="selected_images" id="flexSwitchCheckDefault{{ image }}" {% if image in selected_files
                             %}checked{% endif %}>
                         <!-- <label class="form-check-label" for="flexSwitchCheckDefault{{ image }}">{{ image | replace(".jpg", "")}}</label> -->
+                        <label class="form-check-label" for="flexSwitchCheckDefault{{ image }}">{{ image | replace(".jpg", "")}}</label>
+
                     </div>
-                    <label>{{ image }}</label>
+                    <!-- <label>{{ image }}</label> -->
                 </div>
             </div>
             {% endfor %}
         </div>
         <br>
         <!-- <button type="submit" class="btn btn-primary"></button> -->
-        <button class="btn btn-primary floating-button" type="submit">Submit Selected Images</button>
+        <button class="btn btn-primary floating-button " type="submit">Confirm Selection</button>
         <a href="{{ url_for('index') }}" class="btn btn-secondary">Return to Home</a>
     </form>
 </div>
 
 <script>
+
     function toggleCheckbox(event, file) {
         // Prevent the form from submitting when clicking on the card
         event.preventDefault();
